# 2025_ReadMaker

./: .env.docker  .env.docker.example  .env.example  .gitignore  Makefile  RAILWAY_DEPLOYMENT.md  README.md  docker-compose.yml  package-lock.json  package.json  railway.toml
.github/workflows/: deploy-railway.yml  eas-build.yml
.serena/: project.yml
ReadMaker/: README.md  app.config.js  app.json  babel.config.js  eas.json  metro.config.js  package-lock.json  package.json
ReadMaker/.github/workflows/: build-native-libs.yml
ReadMaker/__tests__/: App.test.tsx
ReadMaker/android/: settings.gradle
ReadMaker/android/app/: build.gradle
ReadMaker/android/app/src/main/java/com/readmaker/: MainActivity.kt  MainApplication.kt  RustBridgeModule.java  RustBridgePackage.java
ReadMaker/android/app/src/main/res/values/: strings.xml
ReadMaker/app/: _layout.tsx  index.tsx  mainDisplay.tsx  splash.tsx  test.tsx
ReadMaker/app/(auth)/: login.tsx  register.tsx
ReadMaker/app/(tabs)/: _layout.tsx  display.tsx  display1.tsx  display2.tsx  home.tsx  library.tsx  mainDisplay.tsx  ranking.tsx  result.tsx
ReadMaker/ios/: .xcode.env  Podfile
ReadMaker/ios/ReadMaker/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard  RustBridge.h  RustBridge.m
ReadMaker/ios/ReadMaker.xcodeproj/: project.pbxproj
ReadMaker/ios/ReadMaker.xcodeproj/xcshareddata/xcschemes/: ReadMaker.xcscheme
ReadMaker/ios/ReadMaker.xcworkspace/: contents.xcworkspacedata
ReadMaker/native/bridge/: README.md  RustBridge.ts  RustBridgeTest.tsx
ReadMaker/native/rust/: .gitignore  Cargo.toml  DICTIONARY_SETUP.md  README.md  extract_dict.rs  test_bridge.rs
ReadMaker/native/rust/dictionaries/: README.md
ReadMaker/native/rust/src/: benchmark.rs  compile_dict.rs  lib.rs  main.rs
ReadMaker/native/rust/tests/: integration_test.rs
ReadMaker/scripts/: build_ipadic_lex.js
ReadMaker/src/config/: api.js
ReadMaker/src/contexts/: AuthContext.tsx  DictionaryContext.tsx
ReadMaker/src/services/: api.ts  authService.ts  dictionaryLoader.ts  rankingService.ts  textAnalyzer.ts
ReadMaker/src/types/: auth.ts  ranking.ts
ReadMaker/src/utils/: testNativeIntegration.ts
backend/: Cargo.toml  Dockerfile  Dockerfile.railway  README.md
backend/api/: Cargo.toml
backend/api/src/: config.rs  main.rs
backend/api/src/database/: mod.rs
backend/api/src/middleware/: auth.rs  mod.rs
backend/api/src/models/: mod.rs  user.rs
backend/api/src/routes/: auth.rs  health.rs  mod.rs  reading.rs  users.rs
backend/core/: Cargo.toml
backend/core/src/: ffi.rs  lib.rs
backend/shared/: Cargo.toml
backend/shared/src/: auth.rs  errors.rs  lib.rs  types.rs  utils.rs
database/: README.md  schema.sql
database/migrations/: 001_create_users.sql  002_create_user_profiles.sql
docker/: README.md
docker/pgadmin/: servers.json
docker/postgres/: postgresql.conf
scripts/: docker-setup.sh
