[package]
name = "readmaker-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
sqlx = { workspace = true }
jsonwebtoken = { workspace = true }
bcrypt = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
config = { workspace = true }
dotenvy = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }

# Local dependencies
readmaker-shared = { path = "../shared" }
readmaker-core = { path = "../core" }

# Additional API-specific dependencies
hyper = "1.0"
anyhow = "1.0"
thiserror = "1.0"