[package]
name = "readmaker-shared"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true }
sqlx = { workspace = true }
jsonwebtoken = { workspace = true }
thiserror = "1.0"